Fix för nyinstallation av java och javafx